# rocm-libraries

./: .claude  .clinerules  .gitignore  .gitmodules  .pre-commit-config.yaml  .vale.ini  .vscode  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DATA_DISTRIBUTION_BENCHMARK.md  Dockerfile  Jenkinsfile  NOTICE  README.md  RUNNING_DATA_DISTRIBUTION_BENCHMARK.md  analyze_distribution_benchmark.py  benchmark_data_distributions.sh  bump_release-staging_version.sh  codecov.yml  dep_overrides.json  install.sh  ref_no_swizzle.asm  ref_swizzle.asm  requirements.txt  review.md  run_miopendriver.py  tensile_tag.txt  toolchain-linux.cmake
common/: CMakeLists.txt
common/include/: common_host_helpers.hpp  fmt_rocblas_types.hpp  rocblas_aliased_formatter.hpp  rocsolver_utility.hpp
common/src/: common_host_helpers.cpp  rocsolver_aliased_formatting.cpp
dnn-providers/ck-fmha-provider/: CMakeLists.txt  README.md
dnn-providers/ck-fmha-provider/cmake/: Dependencies.cmake  Tests.cmake
dnn-providers/ck-fmha-provider/configs/: hipdnn_fwd.json  hipdnn_sdpa.json
dnn-providers/ck-fmha-provider/docs/: EndToEndGuide.md  KernelSelection.md  OperationSupport.md
dnn-providers/ck-fmha-provider/integration_tests/: CMakeLists.txt  EndToEndSdpaDemo.cpp  EndToEndSdpaRtcDemo.cpp  EndToEndTest.cpp
dnn-providers/ck-fmha-provider/src/: CkFmhaContainer.cpp  CkFmhaContainer.hpp  CkFmhaContext.hpp  CkFmhaHandle.cpp  CkFmhaHandle.hpp  CkFmhaJit.cpp  CkFmhaJit.hpp  CkFmhaPluginPublic.cpp  CkFmhaRtcKernelInstance.cpp  CkFmhaRtcKernelInstance.hpp  CkFmhaRtcStats.cpp  CkFmhaRtcStats.hpp  CkFmhaSettings.hpp
dnn-providers/ck-fmha-provider/tests/: CkFmhaPluginTest.cpp  CkFmhaRtcCacheVerifyTest.cpp  CkFmhaRtcUnitTest.cpp
dnn-providers/hip-kernel-provider/: .clang-format-ignore  .gitignore  CMakeLists.txt  EngineManager.cpp  EngineManager.hpp  HipKernelContainer.cpp  HipKernelContainer.hpp  HipKernelPlugin.cpp  HipKernelPlugin.hpp  HipKernelPluginPublic.cpp  HipKernelUtils.cpp  HipKernelUtils.hpp  HipdnnEnginePluginExecutionContext.hpp  HipdnnEnginePluginHandle.hpp  HipdnnHipKernelContext.hpp  HipdnnHipKernelHandle.cpp  HipdnnHipKernelHandle.hpp  HipdnnHipKernelSettings.hpp  README.md
dnn-providers/hip-kernel-provider/cmake/: Dependencies.cmake  Tests.cmake  VersionUtils.cmake
dnn-providers/hip-kernel-provider/engines/: EngineInterface.hpp  HipKernelEngine.cpp  HipKernelEngine.hpp
dnn-providers/hip-kernel-provider/hip/: HipKernel.cpp  HipKernel.hpp  HipProgram.cpp  HipProgram.hpp  HipUtils.hpp
dnn-providers/hip-kernel-provider/integration_tests/: CMakeLists.txt  IntegrationGpuBatchnormForwardInference.cpp  IntegrationGpuBatchnormForwardInferenceAndActivation.cpp  IntegrationGpuBatchnormForwardInferenceWithVariance.cpp  IntegrationGpuBatchnormForwardInferenceWithVarianceAndActivation.cpp  IntegrationGraphVerificationHarness.hpp
dnn-providers/hip-kernel-provider/kernels/: BatchnormActivation.hpp  CMakeLists.txt  HipKernelMath.hpp  kernel_includes.cpp.in
dnn-providers/hip-kernel-provider/src/: CMakeLists.txt  HipKernelContainer.cpp  HipKernelUtils.cpp  HipKernelUtils.hpp
dnn-providers/hip-kernel-provider/tests/: CMakeLists.txt  TestHipKernelEngineManager.cpp  TestHipKernelEnginePluginApi.cpp  TestHipKernelHipdnnEnginePluginHandle.cpp  TestHipKernelHipdnnPluginExecutionContext.cpp  TestHipKernelPluginApi.cpp  TestHipProgramAndKernel.cpp  main.cpp
dnn-providers/integration-tests/: .clang-tidy  CMakeLists.txt  README.md  pr_description.md
dnn-providers/integration-tests/cmake/: Dependencies.cmake  HipdnnIntegrationTestHelpers.cmake  Tests.cmake
dnn-providers/integration-tests/gpu_ref/: CMakeLists.txt
dnn-providers/integration-tests/src/: main.cpp  (+3 more)
projects/composablekernel/: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS_SETUP.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CLAUDE_TILE_GEMM.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  Dockerfile  Dockerfile.aiter  Dockerfile.compiler  Dockerfile.fa  Dockerfile.pytorch  FINAL_FIX_SUMMARY.md  INSTANCE_CONSTRAINTS.md  Jenkinsfile  PROBLEM.md  README.md  REBUILD_INSTRUCTIONS.md  RUNTIME_INDEXING_PROTOTYPE_SUMMARY.md  TRIAGE_GPU_MEMORY_FAULT.md  Taskfile.yaml  XOR_LDS_SWIZZLE_LEDGER.md  analyze_build_errors.sh  compute_top_errors.py  extract_perf.py  failed_include_test_targets.txt  fix_summary.md  passed_include_test_targets.txt  pyproject.toml  reproduce.md  run.sh  run_bwd.sh  run_docker_build.sh  run_fwd.sh  run_tile_bwd.sh  run_tile_fwd.sh  (+12 more)
projects/hipblas/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
projects/hiprand/: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  rmake.py
projects/mori/: .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  README.md  pyproject.toml
projects/primus-turbo/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
projects/rocblas/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  bump_develop_version.sh  bump_release-staging_version.sh  cmake-conflicts.md  install.sh  rdeps.py  rdeps.xml  rmake.py  rtest.py  rtest.xml  tensile_tag.txt  toolchain-linux.cmake  toolchain-windows.cmake
projects/rocprim/: .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  NOTICES.txt  README.md  rmake.py  toolchain-linux.cmake  toolchain-windows.cmake
projects/rocrand/: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  rmake.py  toolchain-linux.cmake  toolchain-windows.cmake
projects/rocsolver/: .gitignore  CHANGELOG.md  CHANGELOG.md.rej  CMakeLists.txt  CMakePresets.json  README.md  bench_latrd.sh  bench_sytrd.sh  install.sh  log.txt  parse_latrd_graph_timing.py  test_latrdforsytrd_hipgraph_timing.sh
sdk/tests/: CMakeLists.txt  test_plugin_last_error_manager.cpp
shared/formocast/: CMakeLists.txt  README.md
shared/origami/: .clang-format  .gitignore  CMakeLists.txt  README.md
shared/tensile/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  pytest.ini  setup.py  tasks.py
test/util/: CMakeLists.txt  unit_container_helper.cpp
(+21437 files in other folders)
