[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rocm-composable-kernel"
dynamic = ["version"]
description = "Composable Kernel, performance-critical kernels for machine learning workloads"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/rocm/composable_kernel"
"Bug Tracker" = "https://github.com/rocm/composable_kernel/issues"

[tool.setuptools]
packages = [
    "ck_dsl",
    "ck_dsl.core",
    "ck_dsl.runtime",
    "ck_dsl.helpers",
    "ck_dsl.analysis",
    "ck_dsl.benchmark",
    "ck_dsl.instances",
    "ck_dsl.examples",
    "ck4inductor",
    "ck4inductor.include",
    "ck4inductor.library",
    "ck4inductor.universal_gemm",
    "ck4inductor.batched_universal_gemm",
    "ck4inductor.grouped_conv_fwd",
    "ck4inductor.ck_tile_universal_gemm",
]

[tool.setuptools.package-dir]
ck_dsl = "python/ck_dsl"
"ck_dsl.core" = "python/ck_dsl/core"
"ck_dsl.runtime" = "python/ck_dsl/runtime"
"ck_dsl.helpers" = "python/ck_dsl/helpers"
"ck_dsl.analysis" = "python/ck_dsl/analysis"
"ck_dsl.benchmark" = "python/ck_dsl/benchmark"
"ck_dsl.instances" = "python/ck_dsl/instances"
"ck_dsl.examples" = "python/ck_dsl/examples"
ck4inductor = "python/ck4inductor"
"ck4inductor.universal_gemm" = "python/ck4inductor/universal_gemm"
"ck4inductor.batched_universal_gemm" = "python/ck4inductor/batched_universal_gemm"
"ck4inductor.grouped_conv_fwd" = "python/ck4inductor/grouped_conv_fwd"
"ck4inductor.ck_tile_universal_gemm" = "python/ck4inductor/ck_tile_universal_gemm"
"ck4inductor.include" = "include"
"ck4inductor.library" = "library"

[tool.setuptools.package-data]
"ck4inductor.include" = ["ck/**/*.hpp"]
"ck4inductor.library" = ["src/tensor_operation_instance/gpu/gemm_universal/**/*.hpp", "src/tensor_operation_instance/gpu/gemm_universal_batched/**/*.hpp", "include/ck/library/tensor_operation_instance/gpu/grouped_conv_fwd/**/*.hpp"]

[tool.setuptools.dynamic]
version = { attr = "ck4inductor.__version__" }
